src/styles/common/globals.scss
html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Montserrat';

  width: 100%;
  height: 100%;
}

body {
  &::-webkit-scrollbar {
    // width: 10px;
    width: 4px;
  }

  &::-webkit-scrollbar-track {
    /* box-shadow: inset 0 0 5px grey; */
    border-radius: 10px;
  }

  &::-webkit-scrollbar-thumb {
    background: rgba(196, 196, 196, 0.2);
    border-radius: 10px;
  }
}

.gradient-bg {
  background: linear-gradient(265.04deg, #f703d9 -10.63%, #795af4 42.02%, #04aefc 103.03%);
}

.gradient-bg-tops {
  background: linear-gradient(267.54deg, rgba(247, 3, 217, 0.3) 3.52%, rgba(121, 90, 244, 0.3) 39.38%, rgba(4, 174, 252, 0.3) 80.93%);
}

.gradient-bg-tops-text {
  background-image: linear-gradient(180deg, #d9d9d9 0%, #888888 100%);
}

.scrollable {
  &::-webkit-scrollbar {
    // width: 10px;
    width: 4px;
  }

  &::-webkit-scrollbar-track {
    /* box-shadow: inset 0 0 5px grey; */
    border-radius: 10px;
  }

  &::-webkit-scrollbar-thumb {
    background: rgba(196, 196, 196, 0.2);
    border-radius: 10px;
  }
}

.no-scrollable {
  &::-webkit-scrollbar {
    height: 0;
    width: 0;
  }
}

input[type='range']::-webkit-slider-thumb {
  width: 10px;
  -webkit-appearance: none;
  height: 10px;
  background: transparent;
}

// @media (min-width: 400px) {
//   .content-container {
//     max-width: 400px;
//   }
// }

// @media (min-width: 600px) {
//   .content-container {
//     max-width: 600px;
//   }
// }

.content-container {
  margin-right: auto;
  margin-left: auto;
}

@media (min-width: 840px) {
  .content-container {
    max-width: 740px;
  }
}

@media (min-width: 968px) {
  .content-container {
    max-width: 868px;
  }
}

@media (min-width: 1100px) {
  .content-container {
    max-width: 1000px;
  }
}

@media (min-width: 1300px) {
  .content-container {
    max-width: 1200px;
  }
}

@media (min-width: 1400px) {
  .content-container {
    max-width: 1300px;
  }
}

